# polars-demo

./: Cargo.toml  Readme.md  data.csv  zip_pop.csv
src/: main.rs
