[package]
name = "polars-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
polars = { version = "0.44.2", features = ["lazy", "csv", "json", "parquet", "strings", "regex", "cov", "serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
